<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/updateTool_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        >

        <TextView
            android:text="@string/update_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

        <EditText
            android:id="@+id/id_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_id"
            android:inputType="textPersonName"
            />


        <EditText
            android:id="@+id/country_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_country"
            android:inputType="textPersonName"
            />


        <EditText
            android:id="@+id/city_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_city"
            android:inputType="textPersonName"
            />


        <EditText
            android:id="@+id/price_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_price"
            android:inputType="textPersonName"
            />


        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_description"
            android:inputType="textPersonName"
            />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_update"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <Button
                android:id="@+id/remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_remove"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </LinearLayout>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/dest_listview"
            android:choiceMode="singleChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        </ListView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/colorAccent"
            app:srcCompat="@android:drawable/ic_input_add" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>